--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ body {
   height: 20px;
   background-color: #7db54f;
   border-radius: 50%;
+  color: #ffffff;
 }
 
 .want-here,
@@ -320,6 +321,7 @@ body {
 }
 
 .gallery-item h3 {
+  position: relative;
   margin: 0;
   padding: 0;
   width: 175px;
@@ -328,17 +330,25 @@ body {
   text-align: center;
   color: #000000;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 62px;
 }
 
-.gallery-divider{
-  background-color: rgba(0, 0, 0, 0.3);
+.gallery-item h3:after,
+.gallery-item-wrap h3:after {
+  content: "";
+  position: absolute;
   width: 60px;
   height: 2px;
-  margin-bottom: 30px;
+  bottom: -32px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.gallery-divider-picture{
+.gallery-item h3:after{
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gallery-item-wrap h3:after{
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -392,6 +402,7 @@ body {
 }
 
 .gallery-item-wrap h3 {
+  position: relative;
   margin: 0;
   padding: 0;
   width: 175px;
@@ -400,7 +411,7 @@ body {
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 62px;
 }
 
 .gallery-item-wrap p {
@@ -1459,19 +1470,18 @@ body {
 /* Модальное окно */
 
 .modal-container {
-  display: block;
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
   background-color: rgba(242, 242, 242, 0.8);
 }
 
-/* Класс для скрытия окна поиска гостиницы */
-.modal-container-close {
-  display: none;
+/* Класс для показа окна поиска гостиницы */
+.modal-container-show {
+  display: flex;
 }
 
 .modal {
@@ -1681,10 +1691,6 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 
-.modal-children-tooltip {
-  position: relative;
-}
-
 .modal-tooltip-wrap {
   display: flex;
   align-items: center;
@@ -1721,26 +1727,32 @@ body {
   top: 10px;
 }
 
-.tooltip-text {
+
+.tooltip-text{
   position: absolute;
-  display: block;
+  display: none;
   width: 256px;
-  top: 44px;
+  top: 40px;
   left: -115px;
   background-color: #333333;
   color: #ffffff;
   box-sizing: border-box;
   border-radius: 10px;
-  font-family: inherit;
+  font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   padding: 20px 18px 23px 22px;
+  text-align: left;
 }
 
-/* Класс для скрытия подсказки в модальном  окне */
-.tooltip-text-hide {
-  display: none;
+/* Класс для показа тултипа Дети */
+.tooltip-text-show{
+  display: block;
+}
+
+.tooltip-toggle:hover .tooltip-text{
+  display: block;
 }
 
 .tooltip-text::before {
