--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /* Подключение шрифтов */
 
 @font-face {
@@ -43,8 +44,6 @@ img{
 
 .page-wrapper {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
   width: 1200px;
   margin: 0 auto;
@@ -75,8 +74,6 @@ img{
 
 .navigation {
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
   margin-left: 168px;
@@ -95,8 +92,6 @@ img{
 
 .navigation-main {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   flex-wrap: wrap;
   margin: 0;
@@ -107,8 +102,6 @@ img{
 }
 
 .navigation-user {
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
   justify-content: flex-end;
   box-sizing: border-box;
   min-width: 268px;
@@ -196,11 +189,7 @@ img{
 .want-here,
 .hotels-more {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
   font-size: 16px;
@@ -271,8 +260,6 @@ img{
 }
 
 .main-container {
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 
@@ -338,18 +325,10 @@ img{
 
 .gallery-item {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
   width: 400px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   box-sizing: border-box;
   padding: 112px 85px;
@@ -429,11 +408,7 @@ img{
 
 .gallery-item-wrap {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   box-sizing: border-box;
   padding: 102px 85px;
@@ -667,8 +642,6 @@ img{
   display: flex;
   min-width: 684px;
   margin-inline: auto;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   margin-bottom: 15px;
 }
@@ -773,8 +746,6 @@ img{
 
 .page-footer {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   background-color: #ffffff;
   padding-top: 40px;
@@ -789,8 +760,6 @@ img{
 .social-list {
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin: 0;
   padding: 0;
@@ -800,11 +769,7 @@ img{
 
 .social-link {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   min-width: 47px;
   min-height: 40px;
@@ -830,11 +795,7 @@ img{
 
 .phone-link {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   font-weight: 400;
   font-size: 40px;
@@ -881,8 +842,6 @@ img{
 
 .main-inner {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
 }
 
@@ -911,8 +870,6 @@ img{
 .breadcrumbs-list {
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin: 0;
   padding: 0;
@@ -964,8 +921,6 @@ img{
 
 .filter-list {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
   margin: 0;
   padding: 0;
@@ -995,8 +950,6 @@ img{
 
 .filter-group-buttons {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
 }
 
@@ -1033,11 +986,7 @@ img{
 .radio-custom {
   position: absolute;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   top: 2px;
   width: 20px;
@@ -1142,14 +1091,16 @@ img{
   padding-left: 20px;
   padding-right: 42px;
   background-color: #f2f2f2;
-  appearance: textfield;
+  -webkit-appearance: textfield;
+          appearance: textfield;
 }
 
 .input-costs-from::-webkit-outer-spin-button,
 .input-costs-from::-webkit-inner-spin-button,
 .input-costs-to::-webkit-inner-spin-button,
 .input-costs-to::-webkit-outer-spin-button {
-  appearance: none;
+  -webkit-appearance: none;
+          appearance: none;
   margin: 0;
 }
 
@@ -1223,8 +1174,6 @@ img{
 
 .hotels-controls-wrap {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 40px;
 }
@@ -1242,8 +1191,6 @@ img{
 .select {
   position: relative;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 294px;
   margin-right: 70px;
@@ -1261,7 +1208,8 @@ img{
   padding: 12px 131px 12px 20px;
   padding-right: 48px;
   box-sizing: border-box;
-  appearance: none;
+  -webkit-appearance: none;
+          appearance: none;
   background-image: url("../images/select-arrow.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
@@ -1644,11 +1592,8 @@ img{
 
 .modal-form {
   display: grid;
-  -ms-grid-columns: 119px 18px 1fr;
   grid-template-columns: 119px 1fr;
   column-gap: 18px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -1722,22 +1667,6 @@ img{
   background-color: #e6e6e6;
 }
 
-.modal-input-date::-webkit-input-placeholder {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.modal-input-date::-moz-placeholder {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.modal-input-date:-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.modal-input-date::-ms-input-placeholder {
-  color: rgba(0, 0, 0, 0.6);
-}
-
 .modal-input-date::placeholder {
   color: rgba(0, 0, 0, 0.6);
 }
@@ -1750,20 +1679,20 @@ img{
   font-weight: inherit;
   font-size: inherit;
   line-height: 24px;
-  appearance: textfield;
+  -webkit-appearance: textfield;
+          appearance: textfield;
 }
 
 .modal-input-age::-webkit-outer-spin-button,
 .modal-input-age::-webkit-inner-spin-button {
-  appearance: none;
+  -webkit-appearance: none;
+          appearance: none;
   margin: 0;
 }
 
 .input-age-wrap {
   display: flex;
   gap: 10px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -1798,8 +1727,6 @@ img{
 
 .modal-tooltip-wrap {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   gap: 10px;
 }
@@ -1900,11 +1827,7 @@ img{
 
 .button-wrap {
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 40px;
   height: 48px;
@@ -1972,15 +1895,11 @@ img{
 .modal-wrap-age {
   display: flex;
   gap: 46px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .children-wrap {
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 46px;
 }
