--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ img{
 }
 
 .gallery {
-  padding-top: 69px;
+  padding-top: 70px;
   text-align: center;
 }
 
@@ -330,7 +330,7 @@ img{
   width: 400px;
   align-items: center;
   box-sizing: border-box;
-  padding: 112px 85px;
+  padding: 113px 85px 114px;
 }
 
 .gallery-item h3 {
@@ -531,7 +531,7 @@ img{
 }
 
 .appointment {
-  padding-top: 96px;
+  padding-top: 97px;
   text-align: center;
   margin-bottom: 96px;
 }
